--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "barryvdh/laravel-dompdf": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
+        "kyslik/column-sortable": "^6.0",
+        "laravel/breeze": "v1.8.2",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "laravel/breeze": "v1.8.2",
-        "maatwebsite/excel": "^3.1.38"
+        "maatwebsite/excel": "^3.1.38",
+        "milon/barcode": "9.0.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
